fix gap by using padding and add item num footer

--- a/netflix-carousel/index.css
+++ b/netflix-carousel/index.css
@@ -9,10 +9,9 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: #1f2937;
+  background-color: #030712;
   color: #f3f4f6;
-  display: grid;
-  align-items: center;
+  padding-block: 80px;
   overflow: hidden;
 }
 
@@ -48,9 +47,10 @@ ul {
 
 .absolute__item {
   position: absolute;
-  left: 50%;
-  top: 50%;
-  background: rgba(0, 0, 0, 0.7);
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
   color: #fff;
-  transform: translate(-50%, -50%);
+  padding: 4px;
+  border-radius: 4px;
 }
